# SPDX-License-Identifier: LGPL-2.1-or-later

shared_sources = files(
        'acl-util.c',
        'btrfs-util.c',
        'chase.c',
        'conf-files.c',
        'copy.c',
        'dirent-util.c',
        'escape.c',
        'extract-word.c',
        'fd-util.c',
        'fileio.c',
        'fs-util.c',
        'hash-funcs.c',
        'hashmap.c',
        'label-util.c',
        'lock-util.c',
        'log.c',
        'mkdir.c',
        'mountpoint-util.c',
        'path-util.c',
        'random-util.c',
        'rm-rf.c',
        'selinux-util.c',
        'siphash24.c',
        'smack-util.c',
        'specifier.c',
        'stat-util.c',
        'string-util.c',
        'strv.c',
        'tmpfile-util.c',
        'user-util.c',
        'utf8.c',
        'xattr-util.c',
)

libshared = static_library(
        'shared',
        shared_sources,
        include_directories : includes,
        dependencies : [libacl,
                        libcap,
                        libm,
                        librt],
        c_args : ['-include', 'config.h'],
        build_by_default : false)
